# atlas

./: .gitignore  Cargo.toml  _typos.toml  build-amd.sh  run-build.sh  run-serve.sh  serve-amd.sh
crates/atlas-kernels/: Cargo.toml  build.rs  build_codegen.rs  build_parse.rs  build_target.rs
crates/atlas-kernels/hip/: README-HIP.md  do_build.sh.ref  libcuda_hip_shim.cpp
crates/atlas-kernels/hip/compat/: cuda_bf16.h  cuda_fp16.h  cuda_fp8.h  cuda_runtime.h
crates/atlas-kernels/hip/ported/: shim_rt_test.c  w4a16_gemm.wmma.cu.ref  wmma_layout_probe.cu.ref
crates/atlas-kernels/src/: lib.rs
crates/atlas-quant/: Cargo.toml
crates/atlas-quant/examples/: emit_fibquant_codebook.rs  fibquant_fidelity.rs
crates/atlas-quant/src/: fp8.rs  lib.rs
crates/atlas-quant/src/fibquant/: codebook.rs  codec.rs  directions.rs  metric.rs  mod.rs  rotate.rs  special.rs
crates/spark-comm/: Cargo.toml
crates/spark-comm/src/: lib.rs
crates/spark-model/: Cargo.toml  build.rs
crates/spark-model/examples/: dense_gemm_microtest.rs  fp8gemm_microtest.rs  gdn_batched_repro.rs  gdn_chunk64_gateb.rs  gdn_chunk_delta_h_gateb.rs  gdn_fla_e2e_gateb.rs  gdn_recompute_wu_gateb.rs  gdn_split4_microtest.rs  inferspark_attn_microtest.rs  kernel_probe.rs  moe_blend_microtest.rs  moe_microtest.rs  moe_shared_microtest.rs  moe_silu_down_microtest.rs  moe_topk_microtest.rs  rope_microtest.rs  w8a16_microtest.rs  w8a16t_microtest.rs
crates/spark-model/src/: layer.rs  traits.rs
crates/spark-model/src/engine/: tests.rs
crates/spark-model/src/factory/: build.rs
crates/spark-model/src/layer/: tests.rs  transformer_layer.rs
crates/spark-model/src/layers/: dense_ffn.rs  fp8_calibration.rs  mod.rs  mtp_head.rs  nemotron_mamba2.rs  nemotron_moe.rs  verify_timing.rs
crates/spark-model/src/layers/moe/: forward.rs  forward_batched.rs  forward_k2.rs  forward_k3.rs  forward_prefill.rs  forward_prefill_bf16.rs  forward_prefill_fp8.rs  helpers_c.rs  init.rs  mod.rs
crates/spark-model/src/layers/mtp_head/: forward.rs  new.rs
crates/spark-model/src/layers/ops/: activations.rs  gemm_dense.rs  gemm_quant.rs  kv_cache.rs  moe_expert.rs  norm.rs  prefill_attn_a.rs  prefill_attn_b.rs  prefill_attn_main_a.rs  prefill_attn_main_b.rs  ssm_gdn_a.rs
crates/spark-model/src/layers/qwen3_attention/: helpers.rs  init.rs  init_kernel_dispatch.rs  kernel_requirements.rs  mod.rs  op_dump.rs  trait_impl.rs  types.rs
crates/spark-model/src/layers/qwen3_ssm/: init.rs  mod.rs  ssm_forward.rs  trait_decode.rs  trait_decode_batched.rs  trait_decode_multi_seq.rs  trait_prefill.rs  trait_prefill_gdn.rs  trait_prefill_helper.rs  trait_prefill_phase3.rs  trait_prefill_proj.rs  trait_prefill_recur.rs
crates/spark-model/src/mistral_loader/loader_impl/: phase_assemble.rs
crates/spark-model/src/model/: block_mgmt.rs  impl_a1.rs  impl_a1_init.rs  impl_a3.rs  impl_b1.rs  impl_b2.rs  impl_b3.rs  ssm_pool.rs  ssm_snapshot.rs  types.rs
crates/spark-model/src/model/trait_impl/: async_chkpt.rs  decode_a.rs  decode_a2.rs  decode_b.rs  decode_checkpoint.rs  ep_misc.rs  kvflash.rs  meta.rs  mixed_batch.rs  mod.rs  prefill_a.rs  prefill_b.rs  prefill_c.rs  sequence.rs  speculative.rs  verify_a.rs  verify_b.rs  verify_c.rs  verify_c2.rs  (+1 more)
crates/spark-model/src/tp_shard/: quant_shard.rs
crates/spark-model/src/traits/: model.rs
crates/spark-model/src/weight_loader/: qwen3.rs  qwen35_dense.rs
crates/spark-model/src/weight_map/: fp8_lut.rs  loaders_fp8.rs  loaders_mtp.rs  nvfp4_detect.rs  quant_helpers.rs  quantize_fns.rs  quantized.rs  ssm_qwen35.rs
crates/spark-runtime/: Cargo.toml  build.rs
crates/spark-runtime/examples/: metal_qwen35_inference.rs  metal_vision_block_forward.rs
crates/spark-runtime/src/: buffers.rs  cuda_backend.rs  gpu.rs  kernel_args.rs  kernel_audit.rs  kv_cache.rs  kv_dequant.rs  kvflash_compact.rs  kvflash_config.rs  kvflash_pager.rs  kvflash_residency.rs  kvflash_scorer.rs  kvflash_verify.rs  lib.rs  metal_backend.rs  sampler.rs  weights.rs
crates/spark-runtime/src/buffers/: sizes.rs  tests.rs
crates/spark-runtime/src/cuda_backend/: gpu_impl.rs
crates/spark-runtime/src/kv_cache/: paged_impl.rs  tests_tq_plus.rs
crates/spark-runtime/src/radix_tree/: snapshot.rs
crates/spark-runtime/src/sampler/: sample_impl.rs
crates/spark-runtime/src/weights/: mlx_int8.rs
crates/spark-runtime/tests/: gdn_chunk64_oracle.rs
crates/spark-server/: Cargo.toml
crates/spark-server/src/: attractor_mask.rs  cli.rs  hint_injector.rs  main.rs  metrics.rs  tokenizer.rs  toml_repair.rs  tool_parser.rs  tool_salvage.rs  whitespace_mask.rs
crates/spark-server/src/anthropic/: handlers.rs
crates/spark-server/src/api/: chat_blocking.rs  chat_phases.rs  chat_stream_dispatch.rs  compact.rs  completions.rs  conversations.rs  inference_impl.rs  inference_types.rs  misc_handlers.rs  mod.rs  responses.rs  responses_stream.rs  responses_stream_finalize.rs  responses_translate.rs  sanitizer.rs  stored.rs  stream_guards.rs  strip.rs  stubs.rs
crates/spark-server/src/grammar/: compile_tools.rs  state.rs
crates/spark-server/src/main_modules/: app_state.rs  kv_dtypes.rs  serve.rs
crates/spark-server/src/openai/: chat_message.rs  chat_request.rs  completions.rs  responses_lowering.rs  tests.rs
crates/spark-server/src/scheduler/: confidence.rs  confidence_tests.rs  decode_logits_content.rs  decode_logits_seq.rs  decode_logits_step.rs  decode_step.rs  emit_step.rs  helpers.rs  helpers_tests.rs  lifecycle.rs  logit_dump.rs  mod.rs  mod_helpers.rs  mtp_step.rs  phase_continue_prefills.rs  phase_promote_prefills.rs  phase_start_prefills.rs  predictor_scorer.rs  prefill_a_step.rs  prefill_b_step.rs  rollback.rs  sample_step.rs  spec_step.rs  types.rs  verify_dflash_step.rs  verify_k2_step.rs  verify_k3_step.rs  verify_k4_step.rs  verify_pipeline_helper.rs
crates/spark-server/src/tokenizer/: jinja_helpers.rs
crates/spark-server/src/tool_parser/: bare_json.rs  fuzzy_repair.rs  parse_dispatch.rs  qwen3_coder.rs  qwen3_xml.rs  tests.rs  type_coerce.rs  validation.rs
crates/spark-server/src/tool_salvage/: extract.rs  tests.rs
(+1213 files in other folders)
